rke2/kube-system/ingress/internal.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
    name: nginx
    annotations:
        ingressclass.kubernetes.io/is-default-class: "true"
spec:
    controller: "k8s.io/ingress-nginx"
