rke2/kube-system/ingress/rke2-ingress-nginx-config.yaml
apiVersion: v1
kind: Service
metadata:
  name: rke2-ingress-nginx-controller
  namespace: kube-system
  annotations:
    metallb.universe.tf/address-pool: "44pool"
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: rke2-ingress-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
