rke2/kube-system/ingress/plex-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hwcopeland-plex
  namespace: kube-system
  annotations:
    cert-manager.io/issuer: "cf-issuer"
spec:
  ingressClassName: nginx
  rules:
    - host: plex.hwcopeland.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hwcopeland-plex-proxy
                port:
                  number: 32400
  tls:
    - hosts:
        - "*.hwcopeland.net"
      secretName: cf-wildcard-cert-secret
---
apiVersion: v1
kind: Service
metadata:
  name: hwcopeland-plex-proxy
  namespace: kube-system
spec:
  type: ExternalName
  externalName: plex-plex-media-server.plex-system.svc.cluster.local  # Backend service in another namespace
  ports:
    - port: 32400
      targetPort: 32400
